--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,15 @@ Bus/lib/*
 Bus/dist/*
 Bus/bin/*
 Bus/build/*
+
 Mobile/lib/*
 Mobile/gen/*
 Mobile/tmp/*
 Mobile/bin/*
 Mobile/dist/*
+
 Shared/lib/*
+Shared/dist/*
+Shared/bin/*
 
 Web/lib/*
