--- a/Bus/.classpath
+++ b/Bus/.classpath
@@ -15,6 +15,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/bluecove-2.1.1-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/bluecove-emu-2.1.1-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/bluecove-gpl-2.1.1-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="C:/Dev/Java libs/sqlite-jdbc-3.8.11.2.jar"/>
+	<classpathentry kind="lib" path="lib/sqlite-jdbc-3.8.11.2.jar"/>
 	<classpathentry kind="output" path="bin/"/>
 </classpath>
