--- a/Bus/.classpath
+++ b/Bus/.classpath
@@ -16,5 +16,11 @@
 	<classpathentry exported="true" kind="lib" path="lib/bluecove-emu-2.1.1-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/bluecove-gpl-2.1.1-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/sqlite-jdbc-3.8.11.2.jar"/>
+	<classpathentry kind="lib" path="lib/bridj-0.6.2.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.7.2.jar"/>
+	<classpathentry kind="lib" path="lib/webcam-capture-0.3.10.jar"/>
+	<classpathentry kind="lib" path="lib/zxing-core-3.2.1-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/zxing-core-3.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/zxing-javase-3.2.1.jar"/>
 	<classpathentry kind="output" path="bin/"/>
 </classpath>
