--- a/Mobile/.classpath
+++ b/Mobile/.classpath
@@ -2,13 +2,13 @@
 <classpath>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/Shared"/>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="gen"/>
-	<classpathentry kind="lib" path="lib/bcprov-jdk16-145.jar"/>
-	<classpathentry kind="lib" path="lib/android-support-v13.jar"/>
-	<classpathentry kind="lib" path="lib/org.restlet.jar"/>
-	<classpathentry kind="lib" path="lib/qrgen-1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/org.restlet.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/android-support-v13.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/bcprov-jdk16-145.jar"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
+	<classpathentry exported="true" kind="lib" path="lib/qrgen-1.2.jar"/>
+	<classpathentry excluding="main/*" kind="src" path="src"/>
+	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
